// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options Sourcemap should generated absolute paths in sourcemap: css 1`] = `
"a { color: black }
"
`;

exports[`Options Sourcemap should generated absolute paths in sourcemap: errors 1`] = `Array []`;

exports[`Options Sourcemap should generated absolute paths in sourcemap: map 1`] = `
Object {
  "mappings": "AAAA,IAAI,aAAa",
  "names": Array [],
  "sources": Array [
    "xxx",
  ],
  "sourcesContent": Array [
    "a { color: black }
",
  ],
  "version": 3,
}
`;

exports[`Options Sourcemap should generated absolute paths in sourcemap: warnings 1`] = `Array []`;

exports[`Options Sourcemap should work Sourcemap - {Boolean}: css 1`] = `
"a { color: black }
"
`;

exports[`Options Sourcemap should work Sourcemap - {Boolean}: errors 1`] = `Array []`;

exports[`Options Sourcemap should work Sourcemap - {Boolean}: map 1`] = `
Object {
  "mappings": "AAAA,IAAI,aAAa",
  "names": Array [],
  "sources": Array [
    "xxx",
  ],
  "sourcesContent": Array [
    "a { color: black }
",
  ],
  "version": 3,
}
`;

exports[`Options Sourcemap should work Sourcemap - {Boolean}: warnings 1`] = `Array []`;

exports[`Options Sourcemap should work Sourcemap - {String}: css 1`] = `"throw new Error(\\"Module build failed (from /home/evilebottnawi/IdeaProjects/postcss-loader/src/index.js):\\\\nValidationError: Invalid options object. PostCSS Loader has been initialized using an options object that does not match the API schema.\\\\n - options.sourceMap should be a boolean.\\\\n   -> Enables/Disables generation of source maps (https://github.com/postcss/postcss-loader#sourcemap)\\\\n    at validate (/home/evilebottnawi/IdeaProjects/postcss-loader/node_modules/schema-utils/dist/validate.js:96:11)\\\\n    at Object.loader (/home/evilebottnawi/IdeaProjects/postcss-loader/src/index.js:36:3)\\");"`;

exports[`Options Sourcemap should work Sourcemap - {String}: errors 1`] = `
Array [
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
ValidationError: Invalid options object. PostCSS Loader has been initialized using an options object that does not match the API schema.
 - options.sourceMap should be a boolean.
   -> Enables/Disables generation of source maps (https://github.com/postcss/postcss-loader#sourcemap)
    at validate (/node_modules/schema-utils/dist/validate.js:96:11)
    at Object.loader (/src/index.js:36:3)",
]
`;

exports[`Options Sourcemap should work Sourcemap - {String}: warnings 1`] = `Array []`;

exports[`Options Sourcemap should work disable Sourcemap - {Boolean}: css 1`] = `
"a { color: black }
"
`;

exports[`Options Sourcemap should work disable Sourcemap - {Boolean}: errors 1`] = `Array []`;

exports[`Options Sourcemap should work disable Sourcemap - {Boolean}: warnings 1`] = `Array []`;

exports[`Options Sourcemap should work with prev sourceMap (less-loader): css 1`] = `
"a {
  color: coral;
}
"
`;

exports[`Options Sourcemap should work with prev sourceMap (less-loader): errors 1`] = `Array []`;

exports[`Options Sourcemap should work with prev sourceMap (less-loader): map 1`] = `
Object {
  "mappings": "AAAA;EAAI,YAAA;AAEJ",
  "names": Array [],
  "sources": Array [
    "xxx",
  ],
  "sourcesContent": Array [
    "a { color: coral }
",
  ],
  "version": 3,
}
`;

exports[`Options Sourcemap should work with prev sourceMap (less-loader): warnings 1`] = `Array []`;

exports[`Options Sourcemap should work with prev sourceMap (sass-loader): css 1`] = `
"a {
  color: coral;
}"
`;

exports[`Options Sourcemap should work with prev sourceMap (sass-loader): errors 1`] = `Array []`;

exports[`Options Sourcemap should work with prev sourceMap (sass-loader): map 1`] = `
Object {
  "mappings": "AAAA;EAAI,YAAA;AAEJ",
  "names": Array [],
  "sources": Array [
    "xxx",
  ],
  "sourcesContent": Array [
    "a { color: coral }
",
  ],
  "version": 3,
}
`;

exports[`Options Sourcemap should work with prev sourceMap (sass-loader): warnings 1`] = `Array []`;
